@@ -30,7 +30,8 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Available Commands"]														= "|cffFFFFFFAvailable Commands|r"
 	L["Discord"]																= "Lightsky#0658"
 	L["Red WARNING"]															= "|cffFF0000WARNING:|r "
-	-- Options Panel Names
+	-- Options Panel Text
+	L["CR Text"]																= "Crafted with |T135451:0|t by Lightsky"
 	L["Adventure Maps"]															= "Adventure Maps"
 	L["Dialog"]																	= "Dialog"
 	L["Emotes"]																	= "Emotes"
@@ -40,6 +41,7 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Mount Training"]															= "Mount Training"
 	L["Speech"]																	= "Speech"
 	L["War Mode"]																= "War Mode"
+	L["Threads of Fate"]														= "Threads of Fate"
 	-- Options Panel Descriptions
 	L["Adventure Maps Check Button"]											= "Automates the selection of zones and footholds for the Battle for Azeroth and Shadowlands adventure maps.\n\n|cffFFFFFFAlliance|r:\n|TInterface\\Buttons\\UI-SpellbookIcon-NextPage-Up:12|t |cffFFFFFFZones|r: Tiragarde Sound, Stormsong Valley, Drustvar\n|TInterface\\Buttons\\UI-SpellbookIcon-NextPage-Up:12|t |cffFFFFFFFootholds|r: Zuldazar, Nazmir, Vol'dun\n|cffFFFFFFHorde|r:\n|TInterface\\Buttons\\UI-SpellbookIcon-NextPage-Up:12|t |cffFFFFFFZones|r: Zuldazar, Nazmir, Vol'dun\n|TInterface\\Buttons\\UI-SpellbookIcon-NextPage-Up:12|t |cffFFFFFFFootholds|r: Stormsong Valley, Tiragarde Sound, Drustvar\n\n|cffFFFFFFShadowlands|r: Bastion, Maldraxxus, Ardenweald, Revendreth"
 	L["Dialog Check Button"]													= "Automates the selection of dialog options when speaking with NPCs. This does NOT apply to all dialogs."
@@ -50,6 +52,7 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Mount Training Check Button"]											= "Automates the purchase of mount training from trainers.\nThe player must have either double the cost of the training OR at least 300 more gold than the cost of the training."
 	L["Speech Check Button"]													= "Automates interacting with specific NPC speech.\n|cffFFFFFFExample|r: The Playful Trickster during \"The Games We Play\" quest in Ardenweald."
 	L["War Mode Check Button"]													= "Automates opting the player into War Mode when entering Orgrimmar or Stormwind City.\nThis only applies to players above level 20, but below 50."
+	L["Threads of Fate Check Button"]											= "Automates the selection of Threads of Fate.\nChecking the box will opt the player into Threads of Fate, but leaving it unchecked will opt the player into Story Mode."
 	-- Skill Lines																
 	L["Riding"]																	= "Riding"
 	-- Speech																	
